methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:60: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime4.FlowerCase'
def run() {
    ^